--- a/3D display/3D display.vcxproj
+++ b/3D display/3D display.vcxproj
@@ -122,7 +122,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="write_triangle_obj.cpp" />
+    <ClCompile Include="write_gradual_change_obj_2.0.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
