--- a/3D display/3D display.vcxproj.filters
+++ b/3D display/3D display.vcxproj.filters
@@ -18,7 +18,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="animation_gradual_change.cpp">
+    <ClCompile Include="write_ours_obj_2.0.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
